--- a/packages/xuedongs-cli/package.json
+++ b/packages/xuedongs-cli/package.json
@@ -27,11 +27,11 @@
     "url": "https://github.com/xuedongs/xuedongs-cli/issues"
   },
   "dependencies": {
-    "@xuedongs/cli-plugin-babel": "workspace:^",
-    "@xuedongs/cli-plugin-linter": "workspace:^",
-    "@xuedongs/cli-plugin-router": "workspace:^",
-    "@xuedongs/cli-plugin-vuex": "workspace:^",
-    "@xuedongs/cli-service": "workspace:^",
+    "@xuedongs/cli-plugin-babel": "workspace:*",
+    "@xuedongs/cli-plugin-linter": "workspace:*",
+    "@xuedongs/cli-plugin-router": "workspace:*",
+    "@xuedongs/cli-plugin-vuex": "workspace:*",
+    "@xuedongs/cli-service": "workspace:*",
     "chalk": "^4.1.0",
     "commander": "^7.0.0",
     "deepmerge": "^4.2.2",
@@ -48,7 +48,7 @@
     "readline": "^1.3.0",
     "recast": "^0.20.4",
     "resolve": "^1.20.0",
-    "slash": "^5.1.0",
+    "slash": "^3.0.0",
     "strip-ansi": "^6.0.0",
     "vue-codemod": "0.0.5",
     "yaml-front-matter": "^4.1.1"
