--- a/.editorconfig
+++ b/.editorconfig
@@ -6,6 +6,9 @@ insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
 end_of_line = lf
+indent_style = space
+tab_width = 4
+max_line_length = 80
 
 [*.{js,json,ts,tsx}]
 indent_style = space
